[package]
name = "ti"
version = "0.1.0"
edition = "2021"

[features]
images = ["dep:image"]

# Some examples require non-default features.
[[example]]
name = "moving_hearts"
required-features = ["images"]

[[example]]
name = "bouncing_hearts"
required-features = ["images"]

[dependencies]
crossterm = "0.26.1"
image = { version = "0.24.6", optional = true }
smallvec = "1.10.0"

# The default cargo-husky hooks are not flexible enough
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
